--- a/src/css/components/sidebar.css
+++ b/src/css/components/sidebar.css
@@ -28,7 +28,7 @@
   position: absolute;
   padding: 20px;
   box-shadow: 0 0 10px rgb(0 0 0 / 30%);
-	overflow-x: auto;
+  overflow-x: auto;
 }
 
 #sidebar[data-align='left'] .sidebar-wrapper {
@@ -41,8 +41,124 @@
   transition: right 0.3s ease-in-out;
 }
 
-.cart-item-img {
-	width: 150px;
-	height: auto;
-	object-fit: cover;
+.cartItem {
+  border-top: 1px solid rgba(224, 222, 218, 0.5);
+  list-style: none;
+}
+
+.cartItem-wrapper {
+  padding: 20px 0;
+}
+
+.available-CartItem {
+  display: flex;
+}
+
+.cartItem-images__wrapper {
+  width: 150px;
+  height: 150px;
+  position: relative;
+  border-radius: 7px;
+  background: #f8f7f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cartIten-images__container {
+  display: block;
+  mix-blend-mode: darken;
+  overflow: hidden;
+  width: 124px;
+  height: 124px;
+}
+
+.cartItem-img {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.cartItem-content__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 4px 40px 0 18px;
+}
+
+.cartItem-content__title {
+  line-height: 30px;
+	font-weight: 500;
+	font-size: 20px;
+}
+
+.cartItem-aside {
+  display: flex;
+  flex-direction: column;
+  width: 120px;
+  min-width: 120px;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+}
+.cartItem-price__container {
+  display: flex;
+  column-gap: 4px;
+  flex-wrap: wrap;
+  margin-right: 10px;
+  font-weight: 700;
+}
+
+.cartItem-price {
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.cartItem-amountSelect {
+  display: flex;
+  background-color: #f5f4f2;
+  border-radius: 7px;
+  height: 32px;
+  overflow: hidden;
+}
+
+.cartItem-offerAmount {
+  height: 100%;
+  margin: 0;
+  border: none;
+  cursor: pointer;
+  background: none;
+  transition: background-color 0.2s;
+  font-size: 24px;
+  color: #000;
+}
+
+.cartItem-offerAmount:hover {
+  background-color: #edece8;
+}
+
+.cartItem-offerAmount:disabled {
+  opacity: 0.3;
+  cursor: auto;
+  pointer-events: none;
+}
+
+.cartItem-offerAmountCounter {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 13px;
+  line-height: 14px;
+  font-weight: 700;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  font-family: inherit;
+  min-width: 18px;
+  flex-grow: 1;
+  border: 0;
+  transition: 0.1s ease-out;
+  transition-property: color;
 }
