--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,6 @@ body {
   background-color: var(--body-color);
 }
 
-
 .container {
   max-width: 1170px;
   width: 100%;
@@ -24,7 +23,7 @@ body {
 }
 
 .scrollHidden {
-	overflow:hidden;
+  overflow: hidden;
 }
 
 h1,
@@ -43,6 +42,15 @@ ul {
 a {
   text-decoration: none;
   color: var(--nav-link-color);
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
 }
 
 /* header */
